--- a/04-practice/practice-footer.css
+++ b/04-practice/practice-footer.css
@@ -1,6 +1,7 @@
-#logo_img {
-    width: 10;
-    height: 10;
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
+body{
+    font-family: "Urbanist", sans-serif;
 }
 
 .container {
@@ -11,14 +12,32 @@
 .wrapper-top {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
+}
+
+.wrapper-top-logo{
+    padding-top: 25px;
 }
 
 .wrapper-top-nav {
+    width: 80%;
     display: flex;
-    width: 500px;
+    justify-content: space-between;
 }
 
-.wrapper-top-nav nav{
-    margin-right: 30px;
-    margin-left: 30px;
+.wrapper-top-nav nav ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.wrapper-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 100;
+    font-size: 16px;
+}
+.wrapper-top-nav-contact p {
+    display: inline-block;
 }
